Adicionado método que retorna o perfil de usuário

--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -157,7 +157,7 @@
                     <hr class="mb-4">
 
                     <a type="button" class="btn btn-light mt-4" data-toggle="modal"
-                    data-target="#exampleModalCenter">Leia mais &raquo;</a>
+                        data-target="#exampleModalCenter">Leia mais &raquo;</a>
 
                     <!--Modal-->
 
@@ -544,7 +544,7 @@
                 <div class="col-md-12 col-lg-5 col-xl-5 col-sm-12 mt-3 mb-3 mid-colum">
 
                     <h2 class="featurette-heading">Transforme seu estilo ranqueada! <span class="text-muted">Confira
-                    dicas e estratégias com membros do time...</span></h2>
+                            dicas e estratégias com membros do time...</span></h2>
 
                     <p class="text-justify lead mt-5">
 
@@ -555,7 +555,8 @@
 
                     </p>
 
-                    <a asp-controller="Users" asp-action="RegisterUser" class="btn btn-primary but-index">Cadastre-se</a>
+                    <a asp-controller="Users" asp-action="RegisterUser"
+                        class="btn btn-primary but-index">Cadastre-se</a>
 
                 </div>
 
@@ -616,7 +617,7 @@
         <div class="">
 
             <h2 class="featurette-heading mt-5">Um dos maiores lançamento da gigante<span class="h22"> RIOT
-                GAMES... Vem novidade por ai!</span>
+                    GAMES... Vem novidade por ai!</span>
             </h2>
 
             <p class="lead text-justify mt-5">
@@ -631,27 +632,27 @@
                 ao da primeira versão, com apenas alguns ajustes feitos com base no feedback que recebemos de
                 vocês:
 
-                <ul>
+            <ul>
 
-                    <li class="lead text-justify mb-3">
+                <li class="lead text-justify mb-3">
                     O primeiro dragão ainda vai surgir aos 5 minutos e os dragões
                     terão um tempo de
                     ressurgimento de 5 minutos.
                     Agora, o Rift vai mudar após a eliminação do primeiro dragão. Mas o elemento que vai dominar
                     o Rift será determinado pelo segundo dragão que surgir.
-                    </li>
+                </li>
 
-                    <li class="lead text-justify mb-3">
+                <li class="lead text-justify mb-3">
                     A equipe que eliminar dois dragões ganhará suas almas
                     poderosas.
-                    </li>
+                </li>
 
-                    <li class="lead text-justify mb-3">
+                <li class="lead text-justify mb-3">
                     O Dragão Ancião vai surgir 5 minutos depois que uma equipe
                     garantir a Alma de Dragão, com um tempo de ressurgimento de 5 minutos.&copy;"Riot Games"
-                    </li>
+                </li>
 
-                </ul>
+            </ul>
 
             </p>
 
