--- a/Views/Users/UserEdit.cshtml
+++ b/Views/Users/UserEdit.cshtml
@@ -35,8 +35,7 @@
 
                     <h1 class="mt-5 mb-4">Cadastre-se</h1>
 
-                    <img class="mb-4 img-fluid" src="../images/friend-cadastro.png"
-                        alt="Imagem de fundo UserEdit Page">
+                    <img class="mb-4 img-fluid" src="../images/friend-cadastro.png" alt="Imagem de fundo UserEdit Page">
 
                     <hr class="mb-4">
 
