--- a/Views/Users/UserList.cshtml
+++ b/Views/Users/UserList.cshtml
@@ -18,8 +18,7 @@
 
                     <h2 class="mb-4">Lista de Usuários Cadastrados</h2>
 
-                    <table
-                        class=" table table-responsive table-bordered table-striped table-light text-center">
+                    <table class=" table table-responsive table-bordered table-striped table-light text-center">
 
                         <thead class="thead-dark text-center">
 
@@ -64,7 +63,7 @@
                     <a class="btn btn-lg btn-dark mt-4" href="/Users/RegisterUser">Cadastrar um novo usuario</a>
 
                 </div>
-                
+
             </div>
 
         </div>
