--- a/Views/Home/Login.cshtml
+++ b/Views/Home/Login.cshtml
@@ -14,19 +14,20 @@
 
                 <form method="post" asp-action="Login" asp-controller="Home" class="form-signin mt-5">
 
-                    <img class="mb-4 ml-3 mt-5 img-fluid" src="../images/logo.jpeg" alt="Imagem Logo tela de Login" width="400" height="180">
+                    <img class="mb-4 ml-3 mt-5 img-fluid" src="../images/logo.jpeg" alt="Imagem Logo tela de Login"
+                        width="400" height="180">
 
                     <h1 class="h3 mb-5 font-weight-200">Bem - Vindos a Killar!</h1>
 
                     <label asp-for="LoginName" class="sr-only">Nick Name</label>
 
-                    <input asp-for="LoginName" name="login" type="text" class="form-control mb-3" placeholder="Login Name"
-                    required autofocus>
+                    <input asp-for="LoginName" name="login" type="text" class="form-control mb-3"
+                        placeholder="Login Name" required autofocus>
 
                     <label asp-for="CheckedPassword" class="sr-only">Password</label>
 
-                    <input asp-for="CheckedPassword" name="password" type="password" class="form-control mb-3" placeholder="Password"
-                    required>
+                    <input asp-for="CheckedPassword" name="password" type="password" class="form-control mb-3"
+                        placeholder="Password" required>
 
                     <button class="btn btn-lg btn-primary btn-block mt-5" type="submit">Log in</button>
 
@@ -36,7 +37,8 @@
 
                 <hr class="mb-4">
 
-                <p>Não tem uma conta? <a asp-controller="Users" asp-action=RegisterUser> Cadastre-se agora mesmo!</a></p>
+                <p>Não tem uma conta? <a asp-controller="Users" asp-action=RegisterUser> Cadastre-se agora mesmo!</a>
+                </p>
 
                 <!--<p class="mt-5 mb-3 text-muted">&copy; @DateTime.Now.ToString("dd/MM/yyyy HH:mm:ss")</p>-->
 
