--- a/Views/Users/UserProfile.cshtml
+++ b/Views/Users/UserProfile.cshtml
@@ -60,7 +60,7 @@
 
             <div class=" mt-3">
 
-                <a class="btn btn-lg btn-outline-primary mr-5 mt-4" href="/Users/UserEdit?Id=@u.Id">Alterar dados</a>
+                <a class="btn btn-lg btn-outline-primary mr-5 mt-4" href="/Users/UserProfileEdit?Id=@u.Id">Alterar dados</a>
                 <a class="btn btn-lg btn-outline-primary mr-5 mt-4" href="/Users/UserDelete?Id=@u.Id"> Exluir Usuário</a>
 
             </div>
