Adicionado sistema de filtrar usuário pela lista de usuários cadastrados e melhorias no layout

--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -18,6 +18,7 @@
     <link rel="stylesheet" href="~/css/styleIndex.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/css/styleUserList.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/css/styleUserDelete.css" asp-append-version="true" />
+    <link rel="stylesheet" href="~/css/styleUserProfile.css" asp-append-version="true" />
     <link rel="stylesheet" href="/css/FontAwesome/all.min.css" asp-append-version="true" />
     <link rel="stylesheet" href="/css/FontAwesome/fontawesome.min.css" asp-append-version="true" />
 
