--- a/Views/Users/UserDelete.cshtml
+++ b/Views/Users/UserDelete.cshtml
@@ -1,5 +1,9 @@
 @model Users
 
+@{
+    ViewData["Title"] = "Excluir Usuário";
+}
+
 <div class="container mt-5">
     <div class="cad-dell col-md-5 offset-md-3">
         <div class="row">
