--- a/Views/Users/UserProfile.cshtml
+++ b/Views/Users/UserProfile.cshtml
@@ -6,7 +6,7 @@
 
 <body class="text-center">
 
-    <main role="main" class="p-5">
+    <main role="main" class="">
         @foreach (Users u in Model)
         {
 
@@ -16,7 +16,17 @@
 
                 <hr class="mb-4 mt-3">
 
-                <img class="rounded-circle border-primary" src="../images/perfil.png" alt="Imagem de perfil">
+                <img class="rounded-circle mb-2 border-primary" src="../images/perfil.png" alt="Imagem de perfil">
+
+                <div class=" mt-3 mb-3">
+
+                    <a class="btn btn-md btn-primary buttonProfile" href="/Users/UserProfileEdit?Id=@u.Id"><i
+                        class="fa-solid fa-user-pen"></i> Editar Perfil</a>
+
+                    <a class="btn btn-md btn-primary buttonProfile" href="/Users/UserDelete?Id=@u.Id"><i
+                        class="fa-solid fa-user-xmark"></i> Excluir Perfil</a>
+
+                </div>
 
                 <hr class="mb-4">
 
@@ -53,15 +63,9 @@
                         <input class="form-control" placeholder="@u.Tipo.ToString()" readonly />
 
                     </div>
+
                 </div>
 
-
-            </div>
-
-            <div class=" mt-3">
-
-                <a class="btn btn-lg btn-outline-primary mr-5 mt-4" href="/Users/UserProfileEdit?Id=@u.Id">Alterar dados</a>
-                <a class="btn btn-lg btn-outline-primary mr-5 mt-4" href="/Users/UserDelete?Id=@u.Id"> Exluir Usuário</a>
 
             </div>
 
