--- a/wwwroot/css/styleUserList.css
+++ b/wwwroot/css/styleUserList.css
@@ -27,6 +27,47 @@
 
 }
 
+.filterButton-container {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    flex-wrap: wrap;
+    padding: 15px;
+    flex-direction: row;
+    background-color: #fff;
+    box-shadow: rgba(0, 0, 0, 0.712) -10px 8px 8px;
+    border-radius: 8px;
+}
+
+.filterButton-container a {
+    width: 30px;
+    height: 30px;
+    text-align: center;
+    margin-top: 5px;
+    margin-left: 10px;
+    font-size: 14px;
+    font-weight: bold;
+    border-radius: 8px;
+    box-shadow: #000 -2px 2px 5px;
+    background-color: rgba(255, 255, 255, 0.647);
+}
+
+.filterButton-container a:hover {
+
+    text-decoration: 1px underline #fff;
+    transition: ease 0.5s;
+    transform: translateY(-3px);
+}
+
+.filterButton-container p {
+    color: #007bff;
+    font-weight: bold;
+    text-decoration: 1px underline #007bff;
+    margin-bottom: 0;
+    margin-top: 10px;
+    font-size: 15px;
+}
+
 
 
 /* Medias */
