Adicionado o FavIcon e verificação via java script do formulário de cadastro de usuários

--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -11,6 +11,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="author" content="Gianluca Vialli">
 
+    <link rel="shortcut icon" href="~/images/skull.png" type="image/x-icon">
     <title>@ViewData["Title"] - WR KILLAR BROTHERHOOD -</title>
 
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
@@ -197,6 +198,7 @@
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
     <script src="~/js/site.js" asp-append-version="true"></script>
+    <script src="~/js/jsRegisterUser.js" asp-append-version="true"></script>
     <script src="~/js/FontAwesome/all.min.js" asp-append-version="true"></script>
     <script src="~/js/FontAwesome/fontawesome.min.js" asp-append-version="true"></script>
 
