--- a/Views/Users/RegisterUser.cshtml
+++ b/Views/Users/RegisterUser.cshtml
@@ -44,13 +44,13 @@
 
                         <div class="col-md-6 mb-3">
 
-                            <input placeholder="Seu Nome" asp-for="Name" type="text" class="form-control" required>
+                            <input placeholder="Seu Nome" id="name" asp-for="Name" type="text" class="form-control" required>
 
                         </div>
 
                         <div class="col-md-6 mb-3">
 
-                            <input placeholder="Data de Nascimento" id="BirthDate" asp-for="BirthDate" type="date"
+                            <input placeholder="Data de Nascimento" id="birthDate" asp-for="BirthDate" type="date"
                                 class="form-control" required>
 
                         </div>
@@ -61,28 +61,28 @@
 
                         <div class="col-md-6 mb-3">
 
-                            <input placeholder="Nick Wr(aaaa#0000)" asp-for="LoginWr" type="text" class="form-control"
+                            <input placeholder="Nick Wr(aaaa#0000)" id="loginWr" asp-for="LoginWr" type="text" class="form-control"
                                 required>
 
                         </div>
 
                         <div class="col-md-6 mb-3">
 
-                            <input placeholder="Nick Name" asp-for="LoginName" type="text" class="form-control"
+                            <input placeholder="Nick Name" id="loginName" asp-for="LoginName" type="text" class="form-control"
                                 required>
 
                         </div>
 
                         <div class="col-md-6 mb-3">
 
-                            <input placeholder="Crie sua senha" asp-for="Password" type="password" class="form-control"
+                            <input placeholder="Crie sua senha" id="password" asp-for="Password" type="password" class="form-control"
                                 required>
 
                         </div>
 
                         <div class="col-md-6 mb-3">
 
-                            <input placeholder="Repita a senha" asp-for="CheckedPassword" type="password"
+                            <input placeholder="Repita a senha" id="checkedPassword" asp-for="CheckedPassword" type="password"
                                 class="form-control" required>
 
                         </div>
@@ -97,7 +97,7 @@
 
                             <label asp-for="Elo" for="Elo">Elo Atual</label>
 
-                            <select class="custom-select d-block w-100" asp-for="Elo" for="Elo" id="Elo" required>
+                            <select class="custom-select d-block w-100" asp-for="Elo" for="Elo" id="elo" required>
 
                                 <option value="">Choose...</option>
 
@@ -127,7 +127,7 @@
 
                             <label asp-for="Lane" for="Lane">Lane Principal</label>
 
-                            <select class="custom-select d-block w-100" asp-for="Lane" for="Lane" id="Lane" required>
+                            <select class="custom-select d-block w-100" asp-for="Lane" for="Lane" id="lane" required>
 
                                 <option value="">Choose...</option>
 
@@ -151,7 +151,7 @@
 
                                 <label asp-for="Tipo" for="Tipo">Selecione o Nível de Usuário</label>
 
-                                <select class="custom-select d-block w-100" asp-for="Tipo" for="Tipo" id="Tipo" required>
+                                <select class="custom-select d-block w-100" asp-for="Tipo" for="Tipo" id="tipo" required>
 
                                     <option value="">Choose...</option>
 
@@ -173,7 +173,7 @@
 
                                 <label asp-for="Tipo" for="Tipo">Selecione o Nível de Usuário</label>
 
-                                <select class="custom-select d-block w-100" asp-for="Tipo" for="Tipo" id="Tipo" required>
+                                <select class="custom-select d-block w-100" asp-for="Tipo" for="Tipo" id="tipo" required>
 
                                     <option value="">Choose...</option>
                                     <option asp-for="@Users.PADRAO" for="PADRAO" value="@Users.PADRAO">Padrão</option>
@@ -194,7 +194,7 @@
                     <input name="Id" type="hidden" asp-for="Id">
                     <input value=@Context.Session.GetInt32("IdUser") type="hidden" asp-for="Id">
 
-                    <button class="btn btn-primary btn-lg btn-block" type="submit" onclick="">Cadastre-se</button>
+                    <button class="btn btn-primary btn-lg btn-block" type="submit" onclick="return ValidateFormUserRegister()">Cadastre-se</button>
 
                     <div class="mt-5 frase">
 
