--- a/wwwroot/css/styleUserProfile.css
+++ b/wwwroot/css/styleUserProfile.css
@@ -14,3 +14,22 @@
     background-color: #fff;
     color: #007bff;
 }
+
+
+
+/* Medias */
+
+@media (max-width: 1200px) {}
+
+@media (max-width: 992px) {
+
+}
+
+@media (max-width: 768px){
+    .btn-searchUser {
+        margin-top: 10px;
+    }
+}
+
+
+@media (max-width: 576px) {}
