Primeiro teste da aplicação no SmarterAsp.Net

--- a/Views/Home/Login.cshtml
+++ b/Views/Home/Login.cshtml
@@ -33,7 +33,7 @@
 
                 </form>
 
-                <p class="text-danger mt-3">@ViewData["Erro"]</p>
+                <p class="text-danger mt-3">@ViewData["ErrorLogin"]</p>
 
                 <hr class="mb-4">
 
