Criação das classes e tabelas de Posts e comentários e também da manipulação de criar e listar postagens no nível Administrador

--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -86,7 +86,7 @@
                                     <a class="dropdown-item" asp-controller="Users" asp-action="RegisterUser"><i
                                         class="fa-solid fa-user-plus"></i> Cadastrar Usuários</a>
                                     <div class="dropdown-divider"></div>
-                                    <a class="dropdown-item" asp-controller="" asp-action=""><i
+                                    <a class="dropdown-item" asp-controller="Posts" asp-action="PostList"><i
                                         class="fa-solid fa-envelopes-bulk"></i> Posts Cadastrados</a>
                                     <div class="dropdown-divider"></div>
                                     <a class="dropdown-item" asp-controller="Users" asp-action="UserList"><i
@@ -105,13 +105,13 @@
 
                                 <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
 
-                                    <a class="dropdown-item" asp-controller="" asp-action=""><i
-                                        class="fa-regular fa-comments"></i> Crie um Post</a>
-                                    <div class="dropdown-divider"></div>
-                                    <a class="dropdown-item" asp-controller="" asp-action=""><i
+                                    <!--<a class="dropdown-item" asp-controller="Posts" asp-action="RegisterPost"><i
+                                            class="fa-regular fa-comments"></i> Crie um Post</a>
+                                        <div class="dropdown-divider"></div>-->
+                                <a class="dropdown-item" asp-controller="" asp-action=""><i
                                         class="fa-solid fa-user-secret"></i> Sobre a Killar</a>
                                     <div class="dropdown-divider"></div>
-                                    <a class="dropdown-item" asp-controller="" asp-action=""><i
+                                    <a class="dropdown-item" asp-controller="Posts" asp-action="RegisterPost"><i
                                         class="fa-solid fa-people-group"></i> Comunidade</a>
                                     <div class="dropdown-divider"></div>
                                     <a class="dropdown-item" asp-controller="Users" asp-action="UserProfile"><i
@@ -143,13 +143,13 @@
 
                                 <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
 
-                                    <a class="dropdown-item" asp-controller="" asp-action=""><i
-                                        class="fa-regular fa-comments"></i> Crie um Post</a>
-                                    <div class="dropdown-divider"></div>
-                                    <a class="dropdown-item" asp-controller="" asp-action=""><i
+                                    <!--<a class="dropdown-item" asp-controller="Posts" asp-action="RegisterPost"><i
+                                            class="fa-regular fa-comments"></i> Crie um Post</a>
+                                        <div class="dropdown-divider"></div>-->
+                                <a class="dropdown-item" asp-controller="" asp-action=""><i
                                         class="fa-solid fa-user-secret"></i> Sobre a Killar</a>
                                     <div class="dropdown-divider"></div>
-                                    <a class="dropdown-item" asp-controller="" asp-action=""><i
+                                    <a class="dropdown-item" asp-controller="Posts" asp-action="RegisterPost"><i
                                         class="fa-solid fa-people-group"></i> Comunidade</a>
                                     <div class="dropdown-divider"></div>
                                     <a class="dropdown-item" asp-controller="Users" asp-action="UserProfile"><i
