--- a/Views/Users/UserList.cshtml
+++ b/Views/Users/UserList.cshtml
@@ -22,7 +22,7 @@
 
                                 <div class="form-group mb-2">
 
-                                    <p style="float:left; margin-right:10px;">
+                                    <p style="float:left; margin-right:10px;"> <!-- *********** Retirar estilos in-line *********** -->
                                         <input class="btn btn-md btn-light text-justify" type="text"
                                             placeholder="Busque por usuários" name="q" />
                                         <input class="btn btn-md btn-dark btn-searchUser" type="submit"
@@ -87,7 +87,7 @@
                                 <p>Páginas : </p>
 
                                 @for (int i = 1; i <= (int)ViewData["pageQuantity"]; i++)
-                                { // paginação cria os links para as pginas
+                                {   // paginação cria os links para as páginas
                                     <a class="btn btn-sm btn-outline-primary" href="/Users/UserList?pages=@i">@i</a>
 
                                 }
