Melhorias e implementações no layout

--- a/Views/Users/UserList.cshtml
+++ b/Views/Users/UserList.cshtml
@@ -73,9 +73,10 @@
                                             <td>@u.Tipo</td>
 
                                             <td><a href="/Users/UserEdit?id=@u.Id"><i class="fa-solid fa-user-pen"></i></a></td>
-                                            <td><a href="/Users/UserDelete?id=@u.Id"><i class="fa-solid fa-user-xmark"></i></a>
-                                            </td>
+                                            <td><a href="/Users/UserDelete?id=@u.Id"><i class="fa-solid fa-user-xmark"></i></a></td>
+
                                         </tr>
+
                                     }
 
                                 </tbody>
