--- a/Views/Posts/PostList.cshtml
+++ b/Views/Posts/PostList.cshtml
@@ -24,7 +24,7 @@
             <div class="row">
 
                 <div class="col-md-10 col-xl-10 col-lg-10 col-sm-10 userFormList">
-                    
+
                     <div class="row">
                         <div class="col-md-12">
                             <form asp-controller="Posts" asp-action="PostList" method="POST">
@@ -54,8 +54,7 @@
 
                                         <input type="text" class="btn btn-md btn-light text-justify mr-3"
                                             placeholder="Busque por Postagens" name="Filter" class="form-control" />
-                                        <button class="btn btn-md btn-dark"
-                                            type="submit">Pesquisar</button>
+                                        <button class="btn btn-md btn-dark" type="submit">Pesquisar</button>
 
                                     </p>
 
@@ -92,8 +91,9 @@
                                         var indexOf = @Model[i].Content.IndexOf("");
                                         var subIndex = @Model[i].Content.Substring(indexOf, @Model[i].Content.Length / 2);
 
-                                        if (stringLength >= 150){
-                                            
+                                        if (stringLength >= 150)
+                                        {
+
                                             <tr>
 
                                                 <td>@Model[i].Id</td>
@@ -102,26 +102,28 @@
                                                 <td>@subIndex</td>
 
                                                 <td><a href="/Posts/PostEdit?id=@Model[i].Id"><i
-                                                    class="fa-solid fa-user-pen"></i></a></td>
+                                                class="fa-solid fa-user-pen"></i></a></td>
                                                 <td><a href="/Posts/PostDelete?id=@Model[i].Id"><i
-                                                    class="fa-solid fa-user-xmark"></i></a>
+                                                class="fa-solid fa-user-xmark"></i></a>
                                                 </td>
 
                                             </tr>
-                                            
-                                        }else{
-                                            
+
+                                        }
+                                        else
+                                        {
+
                                             <tr>
-                                                
+
                                                 <td>@Model[i].Id</td>
                                                 <td>@Model[i].Author</td>
                                                 <td>@Model[i].PostDate</td>
                                                 <td>@Model[i].Content</td>
 
                                                 <td><a href="/Posts/PostEdit?id=@Model[i].Id"><i
-                                                    class="fa-solid fa-user-pen"></i></a></td>
+                                                class="fa-solid fa-user-pen"></i></a></td>
                                                 <td><a href="/Posts/PostDelete?id=@Model[i].Id"><i
-                                                    class="fa-solid fa-user-xmark"></i></a>
+                                                class="fa-solid fa-user-xmark"></i></a>
                                                 </td>
 
                                             </tr>
