--- a/Views/Users/_CommentList.cshtml
+++ b/Views/Users/_CommentList.cshtml
@@ -4,7 +4,8 @@
 {
     <div class="mt-3 text-justify comment-list">
 
-        <h5>@c.Author </h5><span class="post-date">@c.CommentDate.ToString("dd/MM/yy HH:mm")</span>
+        <h5>@c.Author </h5>
+        <span class="post-date">@c.CommentDate.ToString("dd/MM/yy HH:mm")</span>
         <p>@c.Content</p>
 
     </div> 
