--- a/wwwroot/css/styleComunity.css
+++ b/wwwroot/css/styleComunity.css
@@ -1,4 +1,10 @@
+.community {
+    margin-top: 80px;
+}
+
 .comunity-container {
+    width: 100%;
+    height: 100%;
     background-color: #007bff;
     margin-top: 5%;
     padding: 50px;
